# Benimmasalim

./: .env.example  .gcloudignore  .gitattributes  .gitignore  .markdownlintignore  .pre-commit-config.yaml  ACTIVATION_3_METHODS.md  AMAZON_FINAL_RAPOR.md  AMAZON_SCENARIO_IMPLEMENTATION.md  ANTIGRAVITY_RULES.md  BOYAMA_KITABI_IMPLEMENTATION_STATUS.md  BOYAMA_KITABI_TEST_GUIDE.md  CAPPADOCIA_PILOT_PLAN.md  CATALHOYUK_PROMPTS_CHECK.md  COLORING_BOOK_FIXES_COMPLETE.md  COLORING_BOOK_HOMEPAGE_COMPLETE.md  COLORING_BOOK_IMPLEMENTATION_COMPLETE.md  COLORING_BOOK_NOT_VISIBLE_FIX.md  COLORING_BOOK_SIMPLIFICATION.md  COLORING_SIMPLIFICATION_SUMMARY.md  DEPLOY.md  DEPLOYMENT_COMPLETE_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEPLOY_NOW.md  DINO_DOPAMIN_PLAN.md  EPHESUS_FINAL_RAPOR.md  EPHESUS_PILOT_PLAN.md  GALATA_FINAL_RAPOR.md  GALATA_PILOT_PLAN.md  GALATA_PROMPTS_CHECK.md  GOBEKLI_FINAL_RAPOR.md  JERUSALEM_FINAL_RAPOR.md  KALITE_KARSILASTIRMA.md  MIGRATION_TALIMAT.md  MODERN_SIPARIS_AKISI_FINAL_SUMMARY.md  OCEAN_PILOT_PLAN.md  OCEAN_PILOT_UYGULAMA_RAPORU.md  PILOT_OZET.md  PRODUCTION_DEPLOYMENT_GUIDE.md  (+27 more)
backend/: .dockerignore  .gcloudignore  Dockerfile  Dockerfile.worker  alembic_error.txt  alembic_error_utf8.txt  check_book.py  check_output.txt  clear_db.py  cloudbuild.yaml  display_check.txt  dump_pixar_book.py  dump_scenario.py  fix_checkmark.py  inspect_live_db.py  list_db.py  ocean_migration_manual.sql  out.txt  out_error.txt  pyproject.toml  query_db.py  requirements-dev.txt  requirements.txt  run_dev.bat  run_dev.ps1  run_local_test.py  run_ocean_migration.sh  start.sh  test_analyze_image.py  test_err.txt  test_failures.txt  test_failures_line.txt  test_gemini.py  test_raw_gemini.py  trigger_coloring_book.py
backend/alembic/: env.py
(+889 files in other folders)
