[project]
name = "benimmasalim-backend"
version = "1.0.0"
description = "Benim Masalım - AI-powered personalized children's book platform"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["scripts/", "alembic/versions/", "venv/"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E712",   # comparison to True/False (SQLAlchemy uses this)
    "E402",   # module import not at top (sometimes needed for env setup)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
    "W291",   # trailing whitespace
    "W293",   # blank line contains whitespace
    "SIM102", # collapsible if (readability preference)
    "SIM105", # contextlib.suppress (explicit try-except more clear)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["app/tests/*", "app/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
